// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing TwitterShare Component renders correctly with blue color 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  width: 0.9375rem;
  height: 0.9375rem;
  margin: 0.375rem 0.9375rem 0.375rem 0;
  border-radius: 2.75rem;
  padding: 0;
  min-width: 0;
  border: solid 1px rgba(29, 34, 39, 0.04);
  color: #42a5f5;
}

.emotion-0 circle {
  r: 12;
}

<svg
  aria-hidden={true}
  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
  data-testid="FiberManualRecordIcon"
  focusable="false"
  iconColor="#42a5f5"
  viewBox="0 0 24 24"
>
  <circle
    cx="12"
    cy="12"
    r="8"
  />
</svg>
`;

exports[`Snapshot Testing TwitterShare Component renders correctly with grey color 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  width: 0.9375rem;
  height: 0.9375rem;
  margin: 0.375rem 0.9375rem 0.375rem 0;
  border-radius: 2.75rem;
  padding: 0;
  min-width: 0;
  border: solid 1px rgba(29, 34, 39, 0.04);
  color: #1976d2;
}

.emotion-0 circle {
  r: 12;
}

<svg
  aria-hidden={true}
  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
  data-testid="FiberManualRecordIcon"
  focusable="false"
  iconColor="#1976d2"
  viewBox="0 0 24 24"
>
  <circle
    cx="12"
    cy="12"
    r="8"
  />
</svg>
`;

exports[`Snapshot Testing TwitterShare Component renders correctly without title 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  width: 0.9375rem;
  height: 0.9375rem;
  margin: 0.375rem 0.9375rem 0.375rem 0;
  border-radius: 2.75rem;
  padding: 0;
  min-width: 0;
  border: solid 1px rgba(29, 34, 39, 0.04);
  color: #bdbdbd;
}

.emotion-0 circle {
  r: 12;
}

<svg
  aria-hidden={true}
  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-0"
  data-testid="FiberManualRecordIcon"
  focusable="false"
  iconColor="#bdbdbd"
  viewBox="0 0 24 24"
>
  <circle
    cx="12"
    cy="12"
    r="8"
  />
</svg>
`;
